<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.thenewdomain.hangman.MainMenu$PlaceholderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/ivBattle"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/battle_symbol"
            app:srcCompat="@drawable/battle_logo" />

        <TextView
            android:id="@+id/tvBattle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="53dp"
            android:text="@string/battle"
            android:textSize="20sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tvBattleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:text="@string/get_ready_for_a_fierce_fight"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnBattle1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="21dp"
            android:text="@string/_1_phone"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnBattle2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/_2_phones"
            android:textSize="20sp" />

    </LinearLayout>

</RelativeLayout>
