<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context="com.thenewdomain.hangman.SignInRegister">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/hangmanlogo"
            android:layout_marginTop="24dp"/>

        <TextView
            android:id="@+id/tvSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textSize="40sp" />

        <EditText
            android:id="@+id/etEmail2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:fontFamily="serif"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/etUserName2"
            android:layout_below="@+id/etUserName2"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:fontFamily="serif"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:fontFamily="serif"
            android:text="@string/btn_sign_in"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvDoNotHaveAccountYet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/do_not_have_any_account_yet"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tVRegisterHere"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="13dp"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/register_here"
            android:textSize="15sp" />

    </LinearLayout>



</RelativeLayout>
