<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/user_name2"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/ivCharacterImage"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/chosen_character"
            app:srcCompat="@drawable/unknowncharacter" />

        <TextView
            android:id="@+id/tvCharacterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text="Unknown"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/tvRankPointsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="serif"
            android:text="@string/rank_points"
            android:textSize="20sp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/tvRankPoints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="0dp"
            android:fontFamily="cursive"
            android:text="0"
            android:textSize="20sp"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/btnSignOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="24dp"
            android:fontFamily="serif"
            android:text="@string/sign_out"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>