<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.thenewdomain.hangman.MainMenu$PlaceholderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/ivIntro"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/intro"
            app:srcCompat="@drawable/guide_logo" />

        <TextView
            android:id="@+id/tvIntro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/game_guides"
            android:textSize="35sp"
            android:fontFamily="serif"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tvIntroText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="A step by step guide to mastering this game. It is not difficult at all, to be honest."
            android:fontFamily="sans-serif-condensed"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnIntro"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:text="@string/view"
            android:textSize="20sp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:fontFamily="serif"/>

    </LinearLayout>

</RelativeLayout>
