<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3d3d3d"
    tools:context="com.thenewdomain.hangman.OnePhoneGameAttack">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            app:srcCompat="@drawable/hangmanlogo1" />

        <TextView
            android:id="@+id/tvPlayer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/player_1"
            android:textSize="40sp"
            android:textColor="#ffffff"/>

        <TextView
            android:id="@+id/tvEnterWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text="Enter Secret Word"
            android:textSize="35sp"
            android:textColor="#ffffff"/>

        <EditText
            android:id="@+id/etWordToBeGuessed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:gravity="center"
            android:inputType="textCapCharacters"
            android:textSize="20sp"
            tools:ignore="LabelFor"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:background="@drawable/oval"/>

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:fontFamily="serif"
            android:text="@string/confirm"
            android:textSize="15sp"
            android:background="@drawable/oval_blue"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="13dp"
            android:fontFamily="serif"
            android:text="@string/back"
            android:textSize="15sp"
            android:background="@drawable/oval_blue"
            android:textColor="#ffffff" />

    </LinearLayout>

</RelativeLayout>
